# RISC_ROS2_WORKSHOP

./: .flake8  .gitignore  CONTRIBUTING.md  LICENSE  README.md
.github/workflows/: ROS-2-CI.yaml
franka_gazebo/franka_gazebo_bringup/: CMakeLists.txt
franka_gazebo/franka_gazebo_bringup/config/: franka_gazebo_controllers.yaml
franka_gazebo/franka_gazebo_bringup/launch/: gazebo_joint_impedance_controller.launch.py  gazebo_joint_position_controller.launch.py  gazebo_joint_velocity_controller.launch.py
franka_gazebo/franka_gazebo_bringup/models/Cube_RISC/: Cube_RISC.stl  WALL.stl  model.config  model.sdf
franka_gazebo/franka_gazebo_bringup/world/: pick_place.sdf
iitgn_controllers/: CMakeLists.txt  iitgn_controllers.xml  package.xml
iitgn_controllers/config/: controllers.yaml
iitgn_controllers/include/iitgn_controllers/: cartesian_velocity_controller.hpp  default_robot_behavior_utils.hpp  gripper_topic_controller.hpp  impedance_controller.hpp  joint_position_controller.hpp  joint_velocity_controller.hpp  motion_generator.hpp  move_to_start_controller.hpp  robot_utils.hpp
iitgn_controllers/src/: cartesian_velocity_controller.cpp  gripper_topic_controller.cpp  impedance_controller.cpp  joint_position_controller.cpp  joint_velocity_controller.cpp  motion_generator.cpp  move_to_start_controller.cpp  ros2_pick_place.py  teleop_node.py
pack/: listner.py  move_circle.py  move_spiral.py  move_st.py  package.xml  setup.cfg  setup.py  talker.py
pack/pack/: back_and_forth.py  listner.py  move_circle.py  move_spiral.py  move_sqaure.py  move_st.py  talker.py
pub_sub/: package.xml  setup.py
pub_sub/pub_sub/: pub.py  sub.py
publisher_node/: package.xml  setup.cfg  setup.py
publisher_node/publisher_node/: publisher_hello_node.py
