<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>iitgn_controllers</name>
  <version>0.1.0</version>
  <description>iitgn_controllers provides custom controllers for velocity control using ros2_control</description>
  <maintainer email="connectsarbeswar@gmail.com">Sarbe5</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>controller_interface</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>franka_msgs</depend>
  <depend>franka_semantic_components</depend>
  <depend>realtime_tools</depend>

  <depend>tf2_eigen</depend>
  <depend>tf2_geometry_msgs</depend>


  <test_depend>ament_cmake</test_depend>
  <test_depend>ament_cmake_clang_format</test_depend>
  <test_depend>ament_cmake_cppcheck</test_depend>
  <test_depend>ament_cmake_lint_cmake</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
